Accessibility fixes, add ScrollToTop button

--- a/app/assets/styles/modules/_album-photos.css
+++ b/app/assets/styles/modules/_album-photos.css
@@ -51,7 +51,6 @@
       height: 100%;
       width: 15px;
       padding: 0;
-      border: 0;
       display: flex;
       flex-wrap: nowrap;
       align-items: center;
@@ -70,10 +69,10 @@
       }
 
       &--icon-path {
-        stroke: $bodyLiteBGFontColor;
+        stroke: currentColor;
         stroke-linecap: round;
         &--dark {
-          stroke: $bodyDarkBGFontColor;
+          stroke: currentColor;
           stroke-linecap: round;
         }
       }
