--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -1,7 +1,7 @@
 .form {
+  font-size: 1.3rem;
   &--required {
-    color: red;
-    font-style: italic;
+    color: black;
     font-weight: bold;
   }
   &--phone {
