--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -25,7 +25,7 @@
 
   &__breadcrumb {
     font-family: $menuFont;
-    position: fixed;
+    /*position: fixed;*/
     margin: 0;
     transform: translateY(0);
     will-change: transform;
@@ -154,10 +154,12 @@
   &__logo {
     padding-top: 0; /*17px*/
     border: 0;
-    /*border: 1px solid yellow;*/
     width: 220px;
     position: relative;
     z-index: $zIndex-1-FirstLevel;
+    svg {
+      stroke: currentColor;
+    }
   }
 
   &__menu-icon {
