--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -7,13 +7,15 @@
     width: 100%;
   }
   &--home-page {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+    max-width: inherit;
     padding: 0 18px;
     z-index: $zIndex-3-ThirdLevel;
-    /*text-align: center;*/
     text-shadow: 3px 3px 2px black;
+    @mixin atMin1200Wide {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
     &__image {
       margin-top: 0;
       margin-bottom: 48px;
@@ -29,7 +31,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /*border: 1px solid yellow;*/
   }
 
   &--site-footer {
@@ -68,7 +69,7 @@
     button {
       cursor: pointer;
       padding: 0;
-      border: 0;
+      /*border: 0;*/
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -115,7 +116,6 @@
     }
     &__book {
       box-shadow: 10px 10px 5px #aaaaaa;
-      border: 0;
       height: 100%;
       @mixin atMin1200Wide {
         margin-right: 10px;
@@ -202,7 +202,6 @@
 
   &__article {
     max-width: inherit;
-    font-size: 1rem;
     @mixin atMin1200Wide {
       max-width: 1000px;
     }
